# PR-reviewer-agent-demo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  README.md  anthropic-example.py  compare.ipynb  eslint.config.js  experiments.patch  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  ruff.toml  tsconfig.json
backend/: main.py
backend/api/: __init__.py  admin.py  (+4 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
shared/: models.py  types.ts
tools/: compare.ipynb
top_ten_repos_patches/: 20250316_augment_agent_v0_astropy__astropy-13236_patch.diff  20250316_augment_agent_v0_astropy__astropy-13453_patch.diff  20250316_augment_agent_v0_astropy__astropy-14508_patch.diff  20250316_augment_agent_v0_astropy__astropy-14539_patch.diff  20250316_augment_agent_v0_astropy__astropy-14995_patch.diff  20250316_augment_agent_v0_astropy__astropy-7606_patch.diff  20250316_augment_agent_v0_astropy__astropy-8872_patch.diff  20250316_augment_agent_v0_django__django-11095_patch.diff  20250316_augment_agent_v0_django__django-11133_patch.diff  20250316_augment_agent_v0_django__django-11265_patch.diff  20250316_augment_agent_v0_django__django-11333_patch.diff  20250316_augment_agent_v0_django__django-11555_patch.diff  20250316_augment_agent_v0_django__django-11728_patch.diff  20250316_augment_agent_v0_django__django-11790_patch.diff  20250316_augment_agent_v0_django__django-11820_patch.diff  20250316_augment_agent_v0_django__django-11885_patch.diff  20250316_augment_agent_v0_django__django-11999_patch.diff  (+1446 more)
(+1965 files in other folders)
