[project]
name = "swe-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "ruff>=0.12.4",
    "pre-commit>=4.0.0",
]

[tool.ruff]
include = ["backend/**/*.py", "shared/**/*.py"]
exclude = ["data/**"]
